y.output
Terminales no usados en gramática

   DOCTYPE
   HEADER
   _HEADER
   OBJECT
   _OBJECT
   TEXTAREA_


Reglas inútiles en el analizador debido a conflictos

   18 TITULO_OPEN: TITULO_OPEN TEXTUAL
   19            | TITLE


Estado 25 conflictos: 6 reducción(ones)/reducción(ones)
Estado 93 conflictos: 5 desplazamiento(s)/reducción(ones)
Estado 94 conflictos: 5 desplazamiento(s)/reducción(ones)
Estado 95 conflictos: 5 desplazamiento(s)/reducción(ones)
Estado 96 conflictos: 5 desplazamiento(s)/reducción(ones)
Estado 97 conflictos: 5 desplazamiento(s)/reducción(ones)
Estado 98 conflictos: 5 desplazamiento(s)/reducción(ones)
Estado 119 conflictos: 6 reducción(ones)/reducción(ones)
Estado 159 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 166 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: ARCHIVO $end

    1 ARCHIVO: HTML_OPEN_TAG CABEZA CUERPO HTML_CLOSE_TAG
    2        | ERROR_CAPTURADO

    3 HTML_OPEN_TAG: HTML
    4              | HTML_ CLOSE

    5 HTML_CLOSE_TAG: _HTML

    6 CABEZA: CABEZA_OPEN CABEZA_CLOSE

    7 CABEZA_OPEN: CABEZA_OPEN TITULO
    8            | CABEZA_OPEN STYLE_TAG
    9            | CABEZA_OPEN LINK_TAG
   10            | CABEZA_OPEN META_TAG
   11            | CABEZA_OPEN SCRIPT_TAG
   12            | HEAD
   13            | HEAD_ CLOSE

   14 CABEZA_CLOSE: _HEAD

   15 TITULO: TITULO_OPEN TITULO_CLOSE

   16 TITULO_OPEN: TITULO_OPEN TEXTUAL
   17            | TITLE
   18            | TITULO_OPEN TEXTUAL
   19            | TITLE

   20 TITULO_CLOSE: _TITLE

   21 CUERPO: CUERPO_OPEN CONTENIDO_BODY CUERPO_CLOSE
   22       | ERROR_CAPTURADO

   23 CUERPO_OPEN: BODY
   24            | BODY_ CLOSE

   25 CUERPO_CLOSE: _BODY

   26 CONTENIDO_BODY: A_TAG CONTENIDO_BODY
   27               | B_TAG CONTENIDO_BODY
   28               | BLOCKQUOTE_TAG CONTENIDO_BODY
   29               | BR_TAG CONTENIDO_BODY
   30               | BUTTON_TAG CONTENIDO_BODY
   31               | CODE_TAG CONTENIDO_BODY
   32               | DIV_TAG CONTENIDO_BODY
   33               | DL_TAG CONTENIDO_BODY
   34               | EMBED_TAG CONTENIDO_BODY
   35               | FORM_TAG CONTENIDO_BODY
   36               | H1_H6_TAG CONTENIDO_BODY
   37               | HR_TAG CONTENIDO_BODY
   38               | IMG_TAG CONTENIDO_BODY
   39               | INPUT_TAG CONTENIDO_BODY
   40               | LINK_TAG CONTENIDO_BODY
   41               | OL_TAG CONTENIDO_BODY
   42               | PRE_TAG CONTENIDO_BODY
   43               | SCRIPT_TAG CONTENIDO_BODY
   44               | TABLE_TAG CONTENIDO_BODY
   45               | TEXTAREA_TAG CONTENIDO_BODY
   46               | UL_TAG CONTENIDO_BODY
   47               | TEXTUAL CONTENIDO_BODY
   48               | /* vacío */

   49 A_TAG: A _A

   50 B_TAG: B _B

   51 BLOCKQUOTE_TAG: BLOCKQUOTE_TAG_OPEN P_TAG BLOCKQUOTE_TAG_CLOSE
   52               | BLOCKQUOTE_TAG_OPEN TEXTUAL BLOCKQUOTE_TAG_CLOSE

   53 BLOCKQUOTE_TAG_OPEN: BLOCKQUOTE
   54                    | BLOCKQUOTE_ CLOSE

   55 BLOCKQUOTE_TAG_CLOSE: _BLOCKQUOTE

   56 BR_TAG: BR _BR

   57 BUTTON_TAG: BUTTON_TAG_OPEN IMG_TAG BUTTON_TAG_CLOSE
   58           | BUTTON_TAG_OPEN TEXTUAL BUTTON_TAG_CLOSE

   59 BUTTON_TAG_OPEN: BUTTON
   60                | BUTTON_ CLOSE

   61 BUTTON_TAG_CLOSE: _BUTTON

   62 CODE_TAG: CODE TEXTUAL _CODE

   63 DIV_TAG: DIV_TAG CONTENIDO_BODY _DIV
   64        | DIV
   65        | DIV_ CLOSE

   66 DL_TAG: DL DD_TAG _DL
   67       | DL DT_TAG _DL

   68 DD_TAG: DD_TAG TEXTUAL _DD
   69       | DD

   70 DT_TAG: DT_TAG TEXTUAL _DT
   71       | DT

   72 EM_TAG: EM TEXTUAL _EM

   73 EMBED_TAG: EMBED _EMBED

   74 FORM_TAG: FORM_TAG INPUT_TAG _FORM
   75         | FORM_TAG TEXTAREA_TAG _FORM
   76         | FORM_TAG BUTTON_TAG _FORM
   77         | FORM
   78         | FORM_ CLOSE

   79 H1_H6_TAG: H1_TAG
   80          | H2_TAG
   81          | H3_TAG
   82          | H4_TAG
   83          | H5_TAG
   84          | H6_TAG

   85 H1_TAG: H1_TAG TEXTUAL _H1
   86       | H1
   87       | H1_ CLOSE

   88 H2_TAG: H2_TAG TEXTUAL _H2
   89       | H2
   90       | H2_ CLOSE

   91 H3_TAG: H3_TAG TEXTUAL _H3
   92       | H3
   93       | H3_ CLOSE

   94 H4_TAG: H4_TAG TEXTUAL _H4
   95       | H4
   96       | H4_ CLOSE

   97 H5_TAG: H5_TAG TEXTUAL _H5
   98       | H5
   99       | H5_ CLOSE

  100 H6_TAG: H6_TAG TEXTUAL _H6
  101       | H6
  102       | H6_ CLOSE

  103 HR_TAG: HR_TAG _HR
  104       | HR
  105       | HR_ CLOSE

  106 IMG_TAG: IMG _IMG

  107 INPUT_TAG: INPUT _INPUT

  108 OL_TAG: OL_TAG LI_TAG _OL
  109       | OL
  110       | OL_ CLOSE

  111 UL_TAG: UL_TAG LI_TAG _UL
  112       | UL

  113 LI_TAG: LI_TAG TEXTUAL _LI
  114       | LI
  115       | LI_ CLOSE

  116 LINK_TAG: LINK _LINK

  117 META_TAG: META _META

  118 P_TAG: P_TAG_OPEN SPAN_TAG TEXTUAL SPAN_TAG _P

  119 P_TAG_OPEN: P
  120           | P_ CLOSE

  121 PRE_TAG: PRE_TAG TEXTUAL _PRE
  122        | PRE
  123        | PRE_ CLOSE

  124 SCRIPT_TAG: SCRIPT_TAG TEXTUAL _SCRIPT
  125           | SCRIPT
  126           | SCRIPT_ CLOSE

  127 SPAN_TAG: SPAN TEXTUAL _SPAN
  128         | /* vacío */

  129 STRONG_TAG: STRONG TEXTUAL _STRONG

  130 STYLE_TAG: STYLE TEXTUAL _STYLE

  131 TABLE_TAG: TABLE CAPTION_TAG TR_TAG _TABLE

  132 CAPTION_TAG: CAPTION_TAG_OPEN TEXTUAL CAPTION_TAG_CLOSE
  133            | /* vacío */

  134 CAPTION_TAG_OPEN: CAPTION
  135                 | CAPTION_ CLOSE

  136 CAPTION_TAG_CLOSE: _CAPTION

  137 TR_TAG: TR_TAG TH_TD_TAG _TR
  138       | TR

  139 TH_TD_TAG: TH_TAG
  140          | TD_TAG

  141 TH_TAG: TH_TAG TEXTUAL _TH
  142       | TH

  143 TD_TAG: TD_TAG TEXTUAL _TD
  144       | TD

  145 TEXTAREA_TAG: TEXTAREA _TEXTAREA
  146             | TEXTAREA TEXTUAL _TEXTAREA

  147 TEXTUAL: P_TAG
  148        | STRONG_TAG
  149        | EM_TAG
  150        | TEXTO

  151 ERROR_CAPTURADO: ERROR


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
TEXTO (258) 150
DOCTYPE (259)
A (260) 49
_A (261) 49
B (262) 50
_B (263) 50
BLOCKQUOTE (264) 53
BLOCKQUOTE_ (265) 54
_BLOCKQUOTE (266) 55
BODY (267) 23
BODY_ (268) 24
_BODY (269) 25
BR (270) 56
_BR (271) 56
BUTTON (272) 59
BUTTON_ (273) 60
_BUTTON (274) 61
CAPTION (275) 134
CAPTION_ (276) 135
_CAPTION (277) 136
CODE (278) 62
_CODE (279) 62
DIV (280) 64
DIV_ (281) 65
_DIV (282) 63
DL (283) 66 67
_DL (284) 66 67
DT (285) 71
_DT (286) 70
DD (287) 69
_DD (288) 68
EM (289) 72
_EM (290) 72
EMBED (291) 73
_EMBED (292) 73
FORM (293) 77
FORM_ (294) 78
_FORM (295) 74 75 76
H1 (296) 86
H1_ (297) 87
_H1 (298) 85
H2 (299) 89
H2_ (300) 90
_H2 (301) 88
H3 (302) 92
H3_ (303) 93
_H3 (304) 91
H4 (305) 95
H4_ (306) 96
_H4 (307) 94
H5 (308) 98
H5_ (309) 99
_H5 (310) 97
H6 (311) 101
H6_ (312) 102
_H6 (313) 100
HEAD (314) 12
HEAD_ (315) 13
_HEAD (316) 14
HEADER (317)
_HEADER (318)
HR (319) 104
HR_ (320) 105
_HR (321) 103
HTML (322) 3
HTML_ (323) 4
_HTML (324) 5
IMG (325) 106
_IMG (326) 106
INPUT (327) 107
_INPUT (328) 107
LI (329) 114
LI_ (330) 115
_LI (331) 113
LINK (332) 116
_LINK (333) 116
META (334) 117
_META (335) 117
OBJECT (336)
_OBJECT (337)
OL (338) 109
OL_ (339) 110
_OL (340) 108
P (341) 119
P_ (342) 120
_P (343) 118
PRE (344) 122
PRE_ (345) 123
_PRE (346) 121
SCRIPT (347) 125
SCRIPT_ (348) 126
_SCRIPT (349) 124
SPAN (350) 127
_SPAN (351) 127
STRONG (352) 129
_STRONG (353) 129
STYLE (354) 130
_STYLE (355) 130
TABLE (356) 131
_TABLE (357) 131
TD (358) 144
_TD (359) 143
TEXTAREA (360) 145 146
TEXTAREA_ (361)
_TEXTAREA (362) 145 146
TH (363) 142
_TH (364) 141
TITLE (365) 17 19
_TITLE (366) 20
TR (367) 138
_TR (368) 137
UL (369) 112
_UL (370) 111
CLOSE (371) 4 13 24 54 60 65 78 87 90 93 96 99 102 105 110 115 120
    123 126 135
ERROR (372) 151


No terminales con las reglas donde aparecen

$accept (118)
    en la izquierda: 0
ARCHIVO (119)
    en la izquierda: 1 2, en la derecha: 0
HTML_OPEN_TAG (120)
    en la izquierda: 3 4, en la derecha: 1
HTML_CLOSE_TAG (121)
    en la izquierda: 5, en la derecha: 1
CABEZA (122)
    en la izquierda: 6, en la derecha: 1
CABEZA_OPEN (123)
    en la izquierda: 7 8 9 10 11 12 13, en la derecha: 6 7 8 9 10 11
CABEZA_CLOSE (124)
    en la izquierda: 14, en la derecha: 6
TITULO (125)
    en la izquierda: 15, en la derecha: 7
TITULO_OPEN (126)
    en la izquierda: 16 17 18 19, en la derecha: 15 16 18
TITULO_CLOSE (127)
    en la izquierda: 20, en la derecha: 15
CUERPO (128)
    en la izquierda: 21 22, en la derecha: 1
CUERPO_OPEN (129)
    en la izquierda: 23 24, en la derecha: 21
CUERPO_CLOSE (130)
    en la izquierda: 25, en la derecha: 21
CONTENIDO_BODY (131)
    en la izquierda: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
    42 43 44 45 46 47 48, en la derecha: 21 26 27 28 29 30 31 32 33
    34 35 36 37 38 39 40 41 42 43 44 45 46 47 63
A_TAG (132)
    en la izquierda: 49, en la derecha: 26
B_TAG (133)
    en la izquierda: 50, en la derecha: 27
BLOCKQUOTE_TAG (134)
    en la izquierda: 51 52, en la derecha: 28
BLOCKQUOTE_TAG_OPEN (135)
    en la izquierda: 53 54, en la derecha: 51 52
BLOCKQUOTE_TAG_CLOSE (136)
    en la izquierda: 55, en la derecha: 51 52
BR_TAG (137)
    en la izquierda: 56, en la derecha: 29
BUTTON_TAG (138)
    en la izquierda: 57 58, en la derecha: 30 76
BUTTON_TAG_OPEN (139)
    en la izquierda: 59 60, en la derecha: 57 58
BUTTON_TAG_CLOSE (140)
    en la izquierda: 61, en la derecha: 57 58
CODE_TAG (141)
    en la izquierda: 62, en la derecha: 31
DIV_TAG (142)
    en la izquierda: 63 64 65, en la derecha: 32 63
DL_TAG (143)
    en la izquierda: 66 67, en la derecha: 33
DD_TAG (144)
    en la izquierda: 68 69, en la derecha: 66 68
DT_TAG (145)
    en la izquierda: 70 71, en la derecha: 67 70
EM_TAG (146)
    en la izquierda: 72, en la derecha: 149
EMBED_TAG (147)
    en la izquierda: 73, en la derecha: 34
FORM_TAG (148)
    en la izquierda: 74 75 76 77 78, en la derecha: 35 74 75 76
H1_H6_TAG (149)
    en la izquierda: 79 80 81 82 83 84, en la derecha: 36
H1_TAG (150)
    en la izquierda: 85 86 87, en la derecha: 79 85
H2_TAG (151)
    en la izquierda: 88 89 90, en la derecha: 80 88
H3_TAG (152)
    en la izquierda: 91 92 93, en la derecha: 81 91
H4_TAG (153)
    en la izquierda: 94 95 96, en la derecha: 82 94
H5_TAG (154)
    en la izquierda: 97 98 99, en la derecha: 83 97
H6_TAG (155)
    en la izquierda: 100 101 102, en la derecha: 84 100
HR_TAG (156)
    en la izquierda: 103 104 105, en la derecha: 37 103
IMG_TAG (157)
    en la izquierda: 106, en la derecha: 38 57
INPUT_TAG (158)
    en la izquierda: 107, en la derecha: 39 74
OL_TAG (159)
    en la izquierda: 108 109 110, en la derecha: 41 108
UL_TAG (160)
    en la izquierda: 111 112, en la derecha: 46 111
LI_TAG (161)
    en la izquierda: 113 114 115, en la derecha: 108 111 113
LINK_TAG (162)
    en la izquierda: 116, en la derecha: 9 40
META_TAG (163)
    en la izquierda: 117, en la derecha: 10
P_TAG (164)
    en la izquierda: 118, en la derecha: 51 147
P_TAG_OPEN (165)
    en la izquierda: 119 120, en la derecha: 118
PRE_TAG (166)
    en la izquierda: 121 122 123, en la derecha: 42 121
SCRIPT_TAG (167)
    en la izquierda: 124 125 126, en la derecha: 11 43 124
SPAN_TAG (168)
    en la izquierda: 127 128, en la derecha: 118
STRONG_TAG (169)
    en la izquierda: 129, en la derecha: 148
STYLE_TAG (170)
    en la izquierda: 130, en la derecha: 8
TABLE_TAG (171)
    en la izquierda: 131, en la derecha: 44
CAPTION_TAG (172)
    en la izquierda: 132 133, en la derecha: 131
CAPTION_TAG_OPEN (173)
    en la izquierda: 134 135, en la derecha: 132
CAPTION_TAG_CLOSE (174)
    en la izquierda: 136, en la derecha: 132
TR_TAG (175)
    en la izquierda: 137 138, en la derecha: 131 137
TH_TD_TAG (176)
    en la izquierda: 139 140, en la derecha: 137
TH_TAG (177)
    en la izquierda: 141 142, en la derecha: 139 141
TD_TAG (178)
    en la izquierda: 143 144, en la derecha: 140 143
TEXTAREA_TAG (179)
    en la izquierda: 145 146, en la derecha: 45 75
TEXTUAL (180)
    en la izquierda: 147 148 149 150, en la derecha: 16 18 47 52 58
    62 68 70 72 85 88 91 94 97 100 113 118 121 124 127 129 130 132
    141 143 146
ERROR_CAPTURADO (181)
    en la izquierda: 151, en la derecha: 2 22


estado 0

    0 $accept: . ARCHIVO $end

    HTML   desplazar e ir al estado 1
    HTML_  desplazar e ir al estado 2
    ERROR  desplazar e ir al estado 3

    ARCHIVO          ir al estado 4
    HTML_OPEN_TAG    ir al estado 5
    ERROR_CAPTURADO  ir al estado 6


estado 1

    3 HTML_OPEN_TAG: HTML .

    $default  reduce usando la regla 3 (HTML_OPEN_TAG)


estado 2

    4 HTML_OPEN_TAG: HTML_ . CLOSE

    CLOSE  desplazar e ir al estado 7


estado 3

  151 ERROR_CAPTURADO: ERROR .

    $default  reduce usando la regla 151 (ERROR_CAPTURADO)


estado 4

    0 $accept: ARCHIVO . $end

    $end  desplazar e ir al estado 8


estado 5

    1 ARCHIVO: HTML_OPEN_TAG . CABEZA CUERPO HTML_CLOSE_TAG

    HEAD   desplazar e ir al estado 9
    HEAD_  desplazar e ir al estado 10

    CABEZA       ir al estado 11
    CABEZA_OPEN  ir al estado 12


estado 6

    2 ARCHIVO: ERROR_CAPTURADO .

    $default  reduce usando la regla 2 (ARCHIVO)


estado 7

    4 HTML_OPEN_TAG: HTML_ CLOSE .

    $default  reduce usando la regla 4 (HTML_OPEN_TAG)


estado 8

    0 $accept: ARCHIVO $end .

    $default  aceptar


estado 9

   12 CABEZA_OPEN: HEAD .

    $default  reduce usando la regla 12 (CABEZA_OPEN)


estado 10

   13 CABEZA_OPEN: HEAD_ . CLOSE

    CLOSE  desplazar e ir al estado 13


estado 11

    1 ARCHIVO: HTML_OPEN_TAG CABEZA . CUERPO HTML_CLOSE_TAG

    BODY   desplazar e ir al estado 14
    BODY_  desplazar e ir al estado 15
    ERROR  desplazar e ir al estado 3

    CUERPO           ir al estado 16
    CUERPO_OPEN      ir al estado 17
    ERROR_CAPTURADO  ir al estado 18


estado 12

    6 CABEZA: CABEZA_OPEN . CABEZA_CLOSE
    7 CABEZA_OPEN: CABEZA_OPEN . TITULO
    8            | CABEZA_OPEN . STYLE_TAG
    9            | CABEZA_OPEN . LINK_TAG
   10            | CABEZA_OPEN . META_TAG
   11            | CABEZA_OPEN . SCRIPT_TAG

    _HEAD    desplazar e ir al estado 19
    LINK     desplazar e ir al estado 20
    META     desplazar e ir al estado 21
    SCRIPT   desplazar e ir al estado 22
    SCRIPT_  desplazar e ir al estado 23
    STYLE    desplazar e ir al estado 24
    TITLE    desplazar e ir al estado 25

    CABEZA_CLOSE  ir al estado 26
    TITULO        ir al estado 27
    TITULO_OPEN   ir al estado 28
    LINK_TAG      ir al estado 29
    META_TAG      ir al estado 30
    SCRIPT_TAG    ir al estado 31
    STYLE_TAG     ir al estado 32


estado 13

   13 CABEZA_OPEN: HEAD_ CLOSE .

    $default  reduce usando la regla 13 (CABEZA_OPEN)


estado 14

   23 CUERPO_OPEN: BODY .

    $default  reduce usando la regla 23 (CUERPO_OPEN)


estado 15

   24 CUERPO_OPEN: BODY_ . CLOSE

    CLOSE  desplazar e ir al estado 33


estado 16

    1 ARCHIVO: HTML_OPEN_TAG CABEZA CUERPO . HTML_CLOSE_TAG

    _HTML  desplazar e ir al estado 34

    HTML_CLOSE_TAG  ir al estado 35


estado 17

   21 CUERPO: CUERPO_OPEN . CONTENIDO_BODY CUERPO_CLOSE

    TEXTO        desplazar e ir al estado 36
    A            desplazar e ir al estado 37
    B            desplazar e ir al estado 38
    BLOCKQUOTE   desplazar e ir al estado 39
    BLOCKQUOTE_  desplazar e ir al estado 40
    BR           desplazar e ir al estado 41
    BUTTON       desplazar e ir al estado 42
    BUTTON_      desplazar e ir al estado 43
    CODE         desplazar e ir al estado 44
    DIV          desplazar e ir al estado 45
    DIV_         desplazar e ir al estado 46
    DL           desplazar e ir al estado 47
    EM           desplazar e ir al estado 48
    EMBED        desplazar e ir al estado 49
    FORM         desplazar e ir al estado 50
    FORM_        desplazar e ir al estado 51
    H1           desplazar e ir al estado 52
    H1_          desplazar e ir al estado 53
    H2           desplazar e ir al estado 54
    H2_          desplazar e ir al estado 55
    H3           desplazar e ir al estado 56
    H3_          desplazar e ir al estado 57
    H4           desplazar e ir al estado 58
    H4_          desplazar e ir al estado 59
    H5           desplazar e ir al estado 60
    H5_          desplazar e ir al estado 61
    H6           desplazar e ir al estado 62
    H6_          desplazar e ir al estado 63
    HR           desplazar e ir al estado 64
    HR_          desplazar e ir al estado 65
    IMG          desplazar e ir al estado 66
    INPUT        desplazar e ir al estado 67
    LINK         desplazar e ir al estado 20
    OL           desplazar e ir al estado 68
    OL_          desplazar e ir al estado 69
    P            desplazar e ir al estado 70
    P_           desplazar e ir al estado 71
    PRE          desplazar e ir al estado 72
    PRE_         desplazar e ir al estado 73
    SCRIPT       desplazar e ir al estado 22
    SCRIPT_      desplazar e ir al estado 23
    STRONG       desplazar e ir al estado 74
    TABLE        desplazar e ir al estado 75
    TEXTAREA     desplazar e ir al estado 76
    UL           desplazar e ir al estado 77

    $default  reduce usando la regla 48 (CONTENIDO_BODY)

    CONTENIDO_BODY       ir al estado 78
    A_TAG                ir al estado 79
    B_TAG                ir al estado 80
    BLOCKQUOTE_TAG       ir al estado 81
    BLOCKQUOTE_TAG_OPEN  ir al estado 82
    BR_TAG               ir al estado 83
    BUTTON_TAG           ir al estado 84
    BUTTON_TAG_OPEN      ir al estado 85
    CODE_TAG             ir al estado 86
    DIV_TAG              ir al estado 87
    DL_TAG               ir al estado 88
    EM_TAG               ir al estado 89
    EMBED_TAG            ir al estado 90
    FORM_TAG             ir al estado 91
    H1_H6_TAG            ir al estado 92
    H1_TAG               ir al estado 93
    H2_TAG               ir al estado 94
    H3_TAG               ir al estado 95
    H4_TAG               ir al estado 96
    H5_TAG               ir al estado 97
    H6_TAG               ir al estado 98
    HR_TAG               ir al estado 99
    IMG_TAG              ir al estado 100
    INPUT_TAG            ir al estado 101
    OL_TAG               ir al estado 102
    UL_TAG               ir al estado 103
    LINK_TAG             ir al estado 104
    P_TAG                ir al estado 105
    P_TAG_OPEN           ir al estado 106
    PRE_TAG              ir al estado 107
    SCRIPT_TAG           ir al estado 108
    STRONG_TAG           ir al estado 109
    TABLE_TAG            ir al estado 110
    TEXTAREA_TAG         ir al estado 111
    TEXTUAL              ir al estado 112


estado 18

   22 CUERPO: ERROR_CAPTURADO .

    $default  reduce usando la regla 22 (CUERPO)


estado 19

   14 CABEZA_CLOSE: _HEAD .

    $default  reduce usando la regla 14 (CABEZA_CLOSE)


estado 20

  116 LINK_TAG: LINK . _LINK

    _LINK  desplazar e ir al estado 113


estado 21

  117 META_TAG: META . _META

    _META  desplazar e ir al estado 114


estado 22

  125 SCRIPT_TAG: SCRIPT .

    $default  reduce usando la regla 125 (SCRIPT_TAG)


estado 23

  126 SCRIPT_TAG: SCRIPT_ . CLOSE

    CLOSE  desplazar e ir al estado 115


estado 24

  130 STYLE_TAG: STYLE . TEXTUAL _STYLE

    TEXTO   desplazar e ir al estado 36
    EM      desplazar e ir al estado 48
    P       desplazar e ir al estado 70
    P_      desplazar e ir al estado 71
    STRONG  desplazar e ir al estado 74

    EM_TAG      ir al estado 89
    P_TAG       ir al estado 105
    P_TAG_OPEN  ir al estado 106
    STRONG_TAG  ir al estado 109
    TEXTUAL     ir al estado 116


estado 25

   17 TITULO_OPEN: TITLE .
   19            | TITLE .

    TEXTO     reduce usando la regla 17 (TITULO_OPEN)
    TEXTO     [reduce usando la regla 19 (TITULO_OPEN)]
    EM        reduce usando la regla 17 (TITULO_OPEN)
    EM        [reduce usando la regla 19 (TITULO_OPEN)]
    P         reduce usando la regla 17 (TITULO_OPEN)
    P         [reduce usando la regla 19 (TITULO_OPEN)]
    P_        reduce usando la regla 17 (TITULO_OPEN)
    P_        [reduce usando la regla 19 (TITULO_OPEN)]
    STRONG    reduce usando la regla 17 (TITULO_OPEN)
    STRONG    [reduce usando la regla 19 (TITULO_OPEN)]
    _TITLE    reduce usando la regla 17 (TITULO_OPEN)
    _TITLE    [reduce usando la regla 19 (TITULO_OPEN)]
    $default  reduce usando la regla 17 (TITULO_OPEN)


estado 26

    6 CABEZA: CABEZA_OPEN CABEZA_CLOSE .

    $default  reduce usando la regla 6 (CABEZA)


estado 27

    7 CABEZA_OPEN: CABEZA_OPEN TITULO .

    $default  reduce usando la regla 7 (CABEZA_OPEN)


estado 28

   15 TITULO: TITULO_OPEN . TITULO_CLOSE
   16 TITULO_OPEN: TITULO_OPEN . TEXTUAL
   18            | TITULO_OPEN . TEXTUAL

    TEXTO   desplazar e ir al estado 36
    EM      desplazar e ir al estado 48
    P       desplazar e ir al estado 70
    P_      desplazar e ir al estado 71
    STRONG  desplazar e ir al estado 74
    _TITLE  desplazar e ir al estado 117

    TITULO_CLOSE  ir al estado 118
    EM_TAG        ir al estado 89
    P_TAG         ir al estado 105
    P_TAG_OPEN    ir al estado 106
    STRONG_TAG    ir al estado 109
    TEXTUAL       ir al estado 119


estado 29

    9 CABEZA_OPEN: CABEZA_OPEN LINK_TAG .

    $default  reduce usando la regla 9 (CABEZA_OPEN)


estado 30

   10 CABEZA_OPEN: CABEZA_OPEN META_TAG .

    $default  reduce usando la regla 10 (CABEZA_OPEN)


estado 31

   11 CABEZA_OPEN: CABEZA_OPEN SCRIPT_TAG .
  124 SCRIPT_TAG: SCRIPT_TAG . TEXTUAL _SCRIPT

    TEXTO   desplazar e ir al estado 36
    EM      desplazar e ir al estado 48
    P       desplazar e ir al estado 70
    P_      desplazar e ir al estado 71
    STRONG  desplazar e ir al estado 74

    $default  reduce usando la regla 11 (CABEZA_OPEN)

    EM_TAG      ir al estado 89
    P_TAG       ir al estado 105
    P_TAG_OPEN  ir al estado 106
    STRONG_TAG  ir al estado 109
    TEXTUAL     ir al estado 120


estado 32

    8 CABEZA_OPEN: CABEZA_OPEN STYLE_TAG .

    $default  reduce usando la regla 8 (CABEZA_OPEN)


estado 33

   24 CUERPO_OPEN: BODY_ CLOSE .

    $default  reduce usando la regla 24 (CUERPO_OPEN)


estado 34

    5 HTML_CLOSE_TAG: _HTML .

    $default  reduce usando la regla 5 (HTML_CLOSE_TAG)


estado 35

    1 ARCHIVO: HTML_OPEN_TAG CABEZA CUERPO HTML_CLOSE_TAG .

    $default  reduce usando la regla 1 (ARCHIVO)


estado 36

  150 TEXTUAL: TEXTO .

    $default  reduce usando la regla 150 (TEXTUAL)


estado 37

   49 A_TAG: A . _A

    _A  desplazar e ir al estado 121


estado 38

   50 B_TAG: B . _B

    _B  desplazar e ir al estado 122


estado 39

   53 BLOCKQUOTE_TAG_OPEN: BLOCKQUOTE .

    $default  reduce usando la regla 53 (BLOCKQUOTE_TAG_OPEN)


estado 40

   54 BLOCKQUOTE_TAG_OPEN: BLOCKQUOTE_ . CLOSE

    CLOSE  desplazar e ir al estado 123


estado 41

   56 BR_TAG: BR . _BR

    _BR  desplazar e ir al estado 124


estado 42

   59 BUTTON_TAG_OPEN: BUTTON .

    $default  reduce usando la regla 59 (BUTTON_TAG_OPEN)


estado 43

   60 BUTTON_TAG_OPEN: BUTTON_ . CLOSE

    CLOSE  desplazar e ir al estado 125


estado 44

   62 CODE_TAG: CODE . TEXTUAL _CODE

    TEXTO   desplazar e ir al estado 36
    EM      desplazar e ir al estado 48
    P       desplazar e ir al estado 70
    P_      desplazar e ir al estado 71
    STRONG  desplazar e ir al estado 74

    EM_TAG      ir al estado 89
    P_TAG       ir al estado 105
    P_TAG_OPEN  ir al estado 106
    STRONG_TAG  ir al estado 109
    TEXTUAL     ir al estado 126


estado 45

   64 DIV_TAG: DIV .

    $default  reduce usando la regla 64 (DIV_TAG)


estado 46

   65 DIV_TAG: DIV_ . CLOSE

    CLOSE  desplazar e ir al estado 127


estado 47

   66 DL_TAG: DL . DD_TAG _DL
   67       | DL . DT_TAG _DL

    DT  desplazar e ir al estado 128
    DD  desplazar e ir al estado 129

    DD_TAG  ir al estado 130
    DT_TAG  ir al estado 131


estado 48

   72 EM_TAG: EM . TEXTUAL _EM

    TEXTO   desplazar e ir al estado 36
    EM      desplazar e ir al estado 48
    P       desplazar e ir al estado 70
    P_      desplazar e ir al estado 71
    STRONG  desplazar e ir al estado 74

    EM_TAG      ir al estado 89
    P_TAG       ir al estado 105
    P_TAG_OPEN  ir al estado 106
    STRONG_TAG  ir al estado 109
    TEXTUAL     ir al estado 132


estado 49

   73 EMBED_TAG: EMBED . _EMBED

    _EMBED  desplazar e ir al estado 133


estado 50

   77 FORM_TAG: FORM .

    $default  reduce usando la regla 77 (FORM_TAG)


estado 51

   78 FORM_TAG: FORM_ . CLOSE

    CLOSE  desplazar e ir al estado 134


estado 52

   86 H1_TAG: H1 .

    $default  reduce usando la regla 86 (H1_TAG)


estado 53

   87 H1_TAG: H1_ . CLOSE

    CLOSE  desplazar e ir al estado 135


estado 54

   89 H2_TAG: H2 .

    $default  reduce usando la regla 89 (H2_TAG)


estado 55

   90 H2_TAG: H2_ . CLOSE

    CLOSE  desplazar e ir al estado 136


estado 56

   92 H3_TAG: H3 .

    $default  reduce usando la regla 92 (H3_TAG)


estado 57

   93 H3_TAG: H3_ . CLOSE

    CLOSE  desplazar e ir al estado 137


estado 58

   95 H4_TAG: H4 .

    $default  reduce usando la regla 95 (H4_TAG)


estado 59

   96 H4_TAG: H4_ . CLOSE

    CLOSE  desplazar e ir al estado 138


estado 60

   98 H5_TAG: H5 .

    $default  reduce usando la regla 98 (H5_TAG)


estado 61

   99 H5_TAG: H5_ . CLOSE

    CLOSE  desplazar e ir al estado 139


estado 62

  101 H6_TAG: H6 .

    $default  reduce usando la regla 101 (H6_TAG)


estado 63

  102 H6_TAG: H6_ . CLOSE

    CLOSE  desplazar e ir al estado 140


estado 64

  104 HR_TAG: HR .

    $default  reduce usando la regla 104 (HR_TAG)


estado 65

  105 HR_TAG: HR_ . CLOSE

    CLOSE  desplazar e ir al estado 141


estado 66

  106 IMG_TAG: IMG . _IMG

    _IMG  desplazar e ir al estado 142


estado 67

  107 INPUT_TAG: INPUT . _INPUT

    _INPUT  desplazar e ir al estado 143


estado 68

  109 OL_TAG: OL .

    $default  reduce usando la regla 109 (OL_TAG)


estado 69

  110 OL_TAG: OL_ . CLOSE

    CLOSE  desplazar e ir al estado 144


estado 70

  119 P_TAG_OPEN: P .

    $default  reduce usando la regla 119 (P_TAG_OPEN)


estado 71

  120 P_TAG_OPEN: P_ . CLOSE

    CLOSE  desplazar e ir al estado 145


estado 72

  122 PRE_TAG: PRE .

    $default  reduce usando la regla 122 (PRE_TAG)


estado 73

  123 PRE_TAG: PRE_ . CLOSE

    CLOSE  desplazar e ir al estado 146


estado 74

  129 STRONG_TAG: STRONG . TEXTUAL _STRONG

    TEXTO   desplazar e ir al estado 36
    EM      desplazar e ir al estado 48
    P       desplazar e ir al estado 70
    P_      desplazar e ir al estado 71
    STRONG  desplazar e ir al estado 74
